--- a/index.html
+++ b/index.html
@@ -232,9 +232,10 @@
                         <div class="mb-2"><i class="bi-envelope fs-1 text-primary"></i></div>
                         <h3 class="h4 mb-2">Reliable email</h3>
                         <p class="text-muted mb-0">Say goodbye to bounced email.</p>
-                        <p class="text-muted mb-0">Our email service provider provides a world-renowned delivery service
+                        <p class="text-muted mb-0">Our email service provider delivers a world-class service
                             second to none.</p>
-                    </div>
+                            <p class="text-muted mb-0">Typically, 99.9% of email will be correctly delivered.</p>
+                        </div>
                 </div>
                 <div class="col-lg-3 col-md-6 text-center">
                     <div class="mt-5">
