--- a/u3a-software.html
+++ b/u3a-software.html
@@ -71,7 +71,7 @@
         <div class="container px-4 px-lg-5">
             <div class="row gx-4 gx-lg-5 align-bottom justify-content-start text-center">
                 <div class="col-lg-8 mx-auto align-self-end">
-                    <div class="h4 text-white font-weight-bold"><span id="title"></span></div>
+                    <h1 class="h4 text-white font-weight-bold"><span id="title"></span></h1>
                 </div>
             </div>
         </div>
@@ -108,29 +108,29 @@
                     It must be feature-rich, yet not too complex,
                     sufficient for your needs yet able to grow into the future,
                     affordable but not cheap,
-                    and supportive when you need help. Importantly, it must be designed for 
+                    and supportive when you need help. Importantly, it must be designed for
                     a U3A, not something cobbled together from another industry.
                 </p>
                 <p>
                     We think that by finding our website your search may be over! Here's what we have to offer...
                 </p>
-                <div class="h5 bg-light"> <span class="bi-database">&nbsp; A single source of truth</span></div>
-                <p>
-                    There is one and only one database of information.
-                    Eliminate multiple spreadsheets, duplication and redundant data
-                    - after all its just a security risk.
-                </p>
+                <ul>
+                    <li><a href="#member-register-sufficient-for-your-needs">A Member register sufficient for your
+                            needs</a></li>
+                    <li><a href="#email-service-that-delivers">An Email service that delivers</a></li>
+                    <li><a href="#online-member-payments">Online member payments</a></li>
+                    <li><a href="#complete-course-and-class-scheduling">Complete course &amp; class scheduling</a></li>
+                    <li><a href="#attendance-recording">Attendance recording</a></li>
+                    <li><a href="#single-cource-of-truth">A single source of truth</a></li>
+                    <li><a href="#secure-by-default">Secure By Default</a></li>
+                </ul>
 
-                <div class="h5 bg-light"> <span class="bi-key">&nbsp; Secure by default</span></div>
-                <p>
-                    How many times have you read the word, <em>secure</em> on this website?
-                    We take this responsibility seriously.
-                    We keep your data safe in Australian-based, Microsoft Azure databases
-                    and provide access to that data using industry-standard role-based authoristaion policies.
-                </p>
 
-                <div class="h5 bg-light"> <span class="bi-people">&nbsp; A Member register sufficient for your
-                        needs</span></div>
+                <div id="member-register-sufficient-for-your-needs"
+                    class="alert alert-secondary d-flex align-items-center"> <span class="col-12 bi-people">&nbsp; A
+                        Member register sufficient for your needs</span>
+                    <a class="justify-content-end" href="#page-top"><span class="bi bi-arrow-up-circle"></span></a>
+                </div>
                 <figure>
                     <figcaption class="h6 col-10 pt-4">A member's detail</figcaption>
                     <div class="col-10 border border-5 rounded"><img class="img-fluid" src="../assets/img/person.png"
@@ -157,12 +157,19 @@
                 </uL>
                 <p>Finally, when this information is no longer required then we delete it.</p>
 
-                <div class="h5 bg-light"> <span class="bi-envelope">&nbsp; An email service that delivers!</span></div>
+                <div id="email-service-that-delivers" class="alert alert-secondary d-flex align-items-center"> <span
+                        class="col-12 bi-envelope">&nbsp; An email service that delivers!</span>
+                    <a class="justify-content-end" href="#page-top"><span class="bi bi-arrow-up-circle"></span></a>
+                </div>
                 <p>
                     There's no doubt about it, email is the inexpensive way of communicating with your membership.
                     However, if not done correctly you will suffer bounced email and member frustration.
                 </p>
-                <p>We do email right meaning 99% of your email correspondence will be received by your members.
+                <p>
+                    We ensure email addresses are correct by requiring new members to confirm
+                    their email when they register into our system.
+                </p>
+                <p>We do email right meaning 99.9% of your email correspondence will be received by your members.
                     Below is a graph of a typical 30 day period for one of our U3A's...
                 </p>
                 <div class="border border-5 rounded mx-auto"><img class="img-fluid"
@@ -170,21 +177,27 @@
                 </div>
                 <p>That's impressive!</p>
 
-                <div class="h5 bg-light"> <span class="bi-bank">&nbsp; Online member payments</span></div>
-                <p>We use the <a href="https://eway.com.au/">Eway online payments system</a> to process new member payments and member renewals.</p>
-                <p>Eway offers a secure and reliable online payment gateway that accepts all major 
+                <div id="online-member-payments" class="alert alert-secondary d-flex align-items-center"> <span
+                        class="col-12 bi-bank">&nbsp; Online member payments</span>
+                    <a class="justify-content-end" href="#page-top"><span class="bi bi-arrow-up-circle"></span></a>
+                </div>
+                <p>We use the <a href="https://eway.com.au/">Eway online payments system</a> to process new member
+                    payments and member renewals.</p>
+                <p>Eway offers a secure and reliable online payment gateway that accepts all major
                     forms of credit card. Importantly, Eway is an Australian company governed by Australian law
                     and boasts local Australian support.</p>
                 <p>We can also process payments made by members directly from their bank account. However, the online
-                    payments system is preferred as the transaction is completed in real time, it is far more accurate 
+                    payments system is preferred as the transaction is completed in real time, it is far more accurate
                     and the money is transferred to your U3A's account usually by the next day.
                 </p>
                 <p>
                     That means no more manual reconciliations and no more orphaned payments.
                 </p>
 
-                <div class="h5 bg-light"> <span class="bi-mortarboard">&nbsp; Complete course &amp; class scheduling
-                    </span></div>
+                <div id="complete-course-and-class-scheduling" class="alert alert-secondary d-flex align-items-center">
+                    <span class="col-12 bi-mortarboard">&nbsp; Complete course &amp; class scheduling</span>
+                    <a class="justify-content-end" href="#page-top"><span class="bi bi-arrow-up-circle"></span></a>
+                </div>
                 <p>
                     Preparing the course schedule for the new year or even the next term can be a time consuming
                     process.
@@ -213,15 +226,65 @@
                     </div>
                 </figure>
 
-                <p>And, when you're done we produce a great easy to read class schedule with enrolment / waitlist 
+                <p>And, when you're done we produce a great easy to read class schedule with enrolment / waitlist
                     statistics that are always up to date.</p>
 
                 <figure>
                     <figcaption class="h6">Class schedule report</figcaption>
-                    <div class="border border-5 rounded mx-auto"><img class="img-fluid" src="../assets/img/class-schedule-report.png"
-                            alt="Class schedule">
+                    <div class="border border-5 rounded mx-auto"><img class="img-fluid"
+                            src="../assets/img/class-schedule-report.png" alt="Class schedule">
                     </div>
                 </figure>
+
+                <div id="attendance-recording" class="alert alert-secondary d-flex align-items-center"> <span
+                        class="col-12 bi-person-check">&nbsp; Attendance Recording</span>
+                    <a class="justify-content-end" href="#page-top"><span class="bi bi-arrow-up-circle"></span></a>
+                </div>
+                <p>
+                    Yes, we know there's a bit of controversy in U3A-land as to whether or not attendance
+                    should be recorded. That's why its completely optional.
+                </p>
+                <p>
+                    If you do decide to record attendance we have some tools to make it easier via the
+                    <a href="U3A-member-portal.html">Member Portal</a>.
+                    Leaders and clerks can record attendance for students in their courses, and students
+                    themselves can record their own attendance via the <em>Cllass Sign-In / Sign-Out</em>
+                    procedure. That saves a lot of work for office volunteers.
+                </p>
+                <p>
+                    Attendance recording itself is a pretty quick and simple process. Just select the students
+                    required from a grid and select Present, Absent With Leave or Absent Without Leave.
+                </p>
+                <p>
+                    And, we give your some great reporting and analysis as a result...
+                </p>
+                <figure>
+                    <div class="border border-5 rounded mx-auto"><img class="img-fluid"
+                            src="../assets/img/attendance-report.png" alt="Class schedule">
+                    </div>
+                </figure>
+
+                <div id="single-cource-of-truth" class="alert alert-secondary d-flex align-items-center"> <span
+                        class="col-12 bi-database">&nbsp; A single source of truth</span>
+                    <a class="justify-content-end" href="#page-top"><span class="bi bi-arrow-up-circle"></span></a>
+                </div>
+                <p>
+                    There is one and only one database of information.
+                    Eliminate multiple spreadsheets, duplication and redundant data
+                    - after all its just a security risk.
+                </p>
+
+                <div id="secure-by-default" class="alert alert-secondary alert-secondary d-flex align-items-center"> <span
+                        class="col-12 bi-key">&nbsp; Secure by default</span>
+                    <a class="justify-content-end" href="#page-top"><span class="bi bi-arrow-up-circle"></span></a>
+                </div>
+                <p>
+                    How many times have you read the word, <em>secure</em> on this website?
+                    We take this responsibility seriously.
+                    We keep your data safe in Australian-based, Microsoft Azure databases
+                    and provide access to that data using industry-standard role-based authoristaion policies.
+                </p>
+
 
             </div>
         </div>
