--- a/u3a-administration-software.html
+++ b/u3a-administration-software.html
@@ -71,7 +71,7 @@
         <div class="container px-4 px-lg-5">
             <div class="row gx-4 gx-lg-5 align-bottom justify-content-start text-center">
                 <div class="col-lg-8 mx-auto align-self-end">
-                    <div class="h4 text-white font-weight-bold"><span id="title"></span></div>
+                    <h1 class="h4 text-white font-weight-bold"><span id="title"></span></h1>
                 </div>
             </div>
         </div>
