Member portal FAQ

--- a/u3a-member-portal.html
+++ b/u3a-member-portal.html
@@ -77,7 +77,7 @@
         </div>
     </section>
 
-<script>
+    <script>
         // 
         e = document.getElementById("menu-link-2");
         a = document.createElement('a');
@@ -235,11 +235,187 @@
                         reports. Class participants
                         may be sent email, SMS or phoned directly all within the app.
                     </p>
-                </div>
-            </div>
-        </div>
-        </div>
-        </div>
+
+
+                    <p>Of course your members will have questions. Let's anticipate a few...</p>
+
+                    <div id="accordion">
+                        <div class="card">
+                            <div class="card-header" id="headingOne">
+                                <h5 class="mb-0">
+                                    <button class="btn btn-link-secondary w-100 text-start" data-bs-toggle="collapse"
+                                        data-bs-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
+                                        This is all too difficult. Can't someone else do it?
+                                    </button>
+                                </h5>
+                            </div>
+
+                            <div id="collapseOne" class="collapse show" aria-labelledby="headingOne"
+                                data-bs-parent="#accordion">
+                                <div class="card-body">
+                                    <p>
+                                        The intention of the software is to relieve the pressure placed
+                                        on "someone else" - your volunteers. Everybody pitches in to do their
+                                        bit rather than relying on one or two to do everything.
+                                    </p>
+                                    <p>
+                                        We recognise however, there are those without the skill or device to
+                                        use the software. The <a href="u3a-administration-software.html">Administrative
+                                            Website</a>
+                                        has a procedure titled <em>Portal (Admin)</em> that allows authorised volunteers
+                                        to process membership / enrolment requirements on behalf of another member.
+                                        Anything done in the <em>Member Portal</em> can also be done on the
+                                        Administrative Website.
+                                    </p>
+                                </div>
+                            </div>
+                        </div>
+
+                        <div class="card">
+                            <div class="card-header" id="headingTwo">
+                                <h5 class="mb-0">
+                                    <button class="btn btn-link-secondary w-100 text-start" data-bs-toggle="collapse"
+                                        data-bs-target="#collapseTwo" aria-expanded="true" aria-controls="collapseTwo">
+                                        My partner &amp; I share an email address. Is that a problem?
+                                    </button>
+                                </h5>
+                            </div>
+                            <div id="collapseTwo" class="collapse" aria-labelledby="headingTwo"
+                                data-bs-parent="#accordion">
+                                <div class="card-body">
+                                    <p>
+                                        No, that's not a problem. Members that share the same email address are known
+                                        as <em>Linked Members</em>. They share the same login and password.
+                                        When logged-in, either member can act on behalf of the other linked member(s).
+                                    </p>
+                                    <p>Linked members are also a great way of providing assistance to other members, if
+                                        required.
+                                        The only caveat is that any member of the linked group has access to
+                                        <strong>all</strong> details pertaining
+                                        to the other linked member(s).
+                                    </p>
+                                </div>
+                            </div>
+
+                            <div class="card">
+                                <div class="card-header" id="headingThree">
+                                    <h5 class="mb-0">
+                                        <button class="btn btn-link-secondary w-100 text-start"
+                                            data-bs-toggle="collapse" data-bs-target="#collapseThree"
+                                            aria-expanded="true" aria-controls="collapseThree">
+                                            Do I have to pay fees by credit card?
+                                        </button>
+                                    </h5>
+                                </div>
+                                <div id="collapseThree" class="collapse" aria-labelledby="headingThree"
+                                    data-bs-parent="#accordion">
+                                    <div class="card-body">
+                                        <p>
+                                            No, you may pay your fees any way the U3A allows.
+                                        </p>
+                                        <p>However, paying online does have distinct advantages...</p>
+                                        <ul>
+                                            <li>The transaction and your U3A <em>financial status</em> is processed
+                                                immediately.
+                                                This means...
+                                                <ul>
+                                                    <li>You don't have to wait 2 -3 three days for the transaction to be
+                                                        cleared.</li>
+                                                    <li>You don't have to wait for U3A volunteers to reconcile the
+                                                        transaction.</li>
+                                                </ul>
+                                            </li>
+                                            <li>The process is far more accurate. Decoding a transaction's description
+                                                &amp; assigning the payment to the correct member is not 100% reliable
+                                                when done manually.
+                                            </li>
+                                        </ul>
+                                    </div>
+                                </div>
+
+                                <div class="card">
+                                    <div class="card-header" id="headingFour">
+                                        <h5 class="mb-0">
+                                            <button class="btn btn-link-secondary w-100 text-start"
+                                                data-bs-toggle="collapse" data-bs-target="#collapseFour"
+                                                aria-expanded="true" aria-controls="collapseFour">
+                                                What is my financial status?
+                                            </button>
+                                        </h5>
+                                    </div>
+                                    <div id="collapseFour" class="collapse" aria-labelledby="headingFour"
+                                        data-bs-parent="#accordion">
+                                        <div class="card-body">
+                                            <p>
+                                                When you pay your fees you become a financial member of the U3A for the
+                                                current
+                                                enrolment year.
+                                            </p>
+                                            <p>
+                                                Any member whether financial or not may enrol in a course or class.
+                                                However, members who are not financial will remain waitlisted.
+                                                Enrolment will not be finalised until fee payment is complete and
+                                                you are a financial member of the U3A.
+                                            </p>
+                                            <p>Members not financial are automatically deleted from the system after
+                                                a pre-determined period of time.
+                                            </p>
+                                        </div>
+                                    </div>
+                                </div>
+
+                                <div class="card">
+                                    <div class="card-header" id="headingFive">
+                                        <h5 class="mb-0">
+                                            <button class="btn btn-link-secondary w-100 text-start"
+                                                data-bs-toggle="collapse" data-bs-target="#collapseFive"
+                                                aria-expanded="true" aria-controls="collapseFive">
+                                                Will my contact details be shared with others?
+                                            </button>
+                                        </h5>
+                                    </div>
+                                    <div id="collapseFive" class="collapse" aria-labelledby="headingFive"
+                                        data-bs-parent="#accordion">
+                                        <div class="card-body">
+                                            <p>We never share your physical address with other members<p>
+                                            <p>
+                                                As a student your email address will be shared with your course
+                                                leader &amp; clerk so that they may contact you. It's your choice
+                                                whether you share your phone details. <em>In case of emergency</em>
+                                                details will be available to leaders &amp; clerks.
+                                            </p>
+                                            <p>
+                                                As a leader or clerk, it is your decision whether or not to share
+                                                your email and phone numbers with your students.
+                                            </p>
+                                        </div>
+                                    </div>
+                                </div>
+
+                                <div class="card">
+                                    <div class="card-header" id="headingSix">
+                                        <h5 class="mb-0">
+                                            <button class="btn btn-link-secondary w-100 text-start"
+                                                data-bs-toggle="collapse" data-bs-target="#collapseSix"
+                                                aria-expanded="true" aria-controls="collapseSix">
+                                                I don't have email, can I get U3A mailouts by post?
+                                            </button>
+                                        </h5>
+                                    </div>
+                                    <div id="collapseSix" class="collapse" aria-labelledby="headingSix"
+                                        data-bs-parent="#accordion">
+                                        <div class="card-body">
+                                            <p>Documents produced by the software can be routed via email or post.
+                                               It is the U3A's decision whether or not to use the postal facility
+                                               and whether or not to charge for it. <p>
+                                        </div>
+                                    </div>
+                                </div>
+
+
+                            </div>
+                        </div>
+                    </div>
     </section>
 
 
