--- a/u3a-software.html
+++ b/u3a-software.html
@@ -148,7 +148,7 @@
                 </uL>
                 <p>We retain payment, enrolment and attendance details for current members.</p>
                 <p>We keep a record of volunteer activities including leader and
-                    course clerk clerk lists, life members and other complimentary membership.</p>
+                    course clerk lists, life members and other complimentary membership.</p>
                 <p>Importantly, this is what <strong>we do not</strong> record...</p>
                 <uL>
                     <li>Bank account details</li>
@@ -213,14 +213,14 @@
                 </p>
 
                 <figure>
-                    <figcaption class="h6">Term definition graphic</figcaption>
+                    <figcaption class="h6">Term definition</figcaption>
                     <div class="border border-5 rounded mx-auto"><img class="img-fluid" src="../assets/img/terms.png"
                             alt="Term definition">
                     </div>
                 </figure>
 
                 <figure>
-                    <figcaption class="h6">Class schedule graphic</figcaption>
+                    <figcaption class="h6">Class schedule</figcaption>
                     <div class="border border-5 rounded mx-auto"><img class="img-fluid" src="../assets/img/schedule.png"
                             alt="Course schedule">
                     </div>
