--- a/u3a-member-portal.html
+++ b/u3a-member-portal.html
@@ -214,7 +214,7 @@
                     </div>
 
                     <p>
-                        There's an old saying, <em>many hands mke light work,</em> and that's exactly what the <em>U3A
+                        There's an old saying, <em>many hands make light work,</em> and that's exactly what the <em>U3A
                             Member Portal</em>
                         is intended to do. By allowing members secure &amp; controlled access to their information and
                         only their information
