--- a/faq.html
+++ b/faq.html
@@ -184,9 +184,11 @@
                                         </li>
                                     </ul>
                                     <h6>Online payment merchant fees</h6>
-                                    <p>In addition, we optionally process new member payments and member renewals via the
-                                        <a href="https://eway.com.au/">Eway online payments system</a> . The merchant 
-                                        fee structure is available on their website but budget $1.00 for a $50.00 membership payment.
+                                    <p>In addition, we optionally process new member payments and member renewals via
+                                        the
+                                        <a href="https://eway.com.au/">Eway online payments system</a> . The merchant
+                                        fee structure is available on their website but budget $1.00 for a $50.00
+                                        membership payment.
                                     </p>
                                 </div>
                             </div>
@@ -412,6 +414,7 @@
                                     </button>
                                 </h5>
                             </div>
+                            
                             <div id="collapseFive" class="collapse" aria-labelledby="headingFive"
                                 data-bs-parent="#accordion">
                                 <div class="card-body">
@@ -420,11 +423,12 @@
                                         <p class="col-11">
                                             Consider your data a pot of gold. By keeping that pot small, we
                                             minimise it's value to bad actors.
-                                            Therefore, we only collect members data considered absolutely necessary to manage
+                                            Therefore, we only collect members data considered absolutely necessary to
+                                            manage
                                             and administer your U3A and, when it is no longer considered necessary
-                                            we proactively delete it.                                             
-                                        </div>
+                                            we proactively delete it.
                                     </div>
+
                                     <p>Secondly, your data is encrypted at rest and in transit. That means it is
                                         encrypted when it is stored
                                         in the database and when it is transferred over the Internet. The only time it
