--- a/index.html
+++ b/index.html
@@ -4,19 +4,23 @@
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
-    <meta name="description" content="A modern web application to manage and administer your U3A Group" />
+    <meta name="description" content="Modern software to manage and administer your U3A Group" />
     <meta name="keywords"
         content="U3A software,U3A Administration,U3A member portal,U3A membership,U3A enrolment,U3A attendance,U3A course,U3A class">
     <meta name="author" content="Michael Hanlon" />
     <meta name='robots' content='max-image-preview:large' />
 
-    <meta property="og:type" content="article" />
-    <meta property="og:title" content="Home" />
-    <meta property="og:url" content="https://u3admin.org.au/" />
-    <meta property="og:site_name" content="Administration software for your U3A" />
-    <meta property="og:description" content="A modern web application to manage and administer your U3A Group" />
-
     <title>U3A Administration</title>
+    <script type="application/ld+json">
+        {
+          "@context" : "https://schema.org",
+          "@type" : "WebSite",
+          "name" : "U3Admin.org.au",
+          "alternateName" : "U3Admin",
+          "url" : "https://u3admin.org.au/"
+        }
+    </script>
+    
     <!-- Bing webmaster tools -->
     <meta name="msvalidate.01" content="FE17E157DA5D4FAFF8CD665B09B69AE3" />
     <!-- Favicon-->
