--- a/u3a-member-portal.html
+++ b/u3a-member-portal.html
@@ -4,19 +4,14 @@
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
-    <meta name="description" content="A modern web application to manage and administer your U3A" />
+    <meta name="description" content="An overview of the U3Admin U3A member portal" />
     <meta name="keywords"
         content="U3A software,U3A Administration,U3A member portal,U3A membership,U3A enrolment,U3A attendance,U3A course,U3A class">
     <meta name="author" content="Michael Hanlon" />
     <meta name='robots' content='max-image-preview:large' />
 
-    <meta property="og:type" content="article" />
-    <meta property="og:title" content="Home" />
-    <meta property="og:url" content="https://u3admin.org.au/" />
-    <meta property="og:site_name" content="U3A Member Portal" />
-    <meta property="og:description" content="A modern web application to manage and administer your U3A" />
-
     <title>U3A Member Portal</title>
+    
     <!-- Bing webmaster tools -->
     <meta name="msvalidate.01" content="FE17E157DA5D4FAFF8CD665B09B69AE3" />
     <!-- Favicon-->
