--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <meta name="author" content="Michael Hanlon" />
     <meta name='robots' content='max-image-preview:large' />
 
-    <title>U3A Administration</title>
+    <title>U3A Administration Software</title>
     <script type="application/ld+json">
         {
           "@context" : "https://schema.org",
