--- a/u3a-software.html
+++ b/u3a-software.html
@@ -241,7 +241,7 @@
                 </p>
                 <p>
                     If you do decide to record attendance we have some tools to make it easier via the
-                    <a href="U3A-member-portal.html">Member Portal</a>.
+                    <a href="u3a-member-portal.html">Member Portal</a>.
                     Leaders and clerks can record attendance for students in their courses, and students
                     themselves can record their own attendance via the <em>Cllass Sign-In / Sign-Out</em>
                     procedure. That saves a lot of work for office volunteers.
